--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "logging",
     "logger"
   ],
-  "homepage": "https://github.com/srsholmes/Recolor/",
-  "repository": "https://github.com/srsholmes/Recolor/",
-  "bugs": "https://github.com/srsholmes/Recolor/issues",
+  "homepage": "https://github.com/srsholmes/colors.re",
+  "repository": "https://github.com/srsholmes/colors.re",
+  "bugs": "https://github.com/srsholmes/colors.re/issues",
   "author": "Simon Holmes",
   "license": "MIT",
   "devDependencies": {
