added in coverage report

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "bsb -make-world",
     "start": "bsb -make-world -w",
     "clean": "bsb -clean-world",
-    "test": "jest"
+    "coverage": "nyc report --temp-directory=coverage --reporter=text-lcov | coveralls",
+    "test": "npm run build && jest --coverage && npm run coverage",
+    "watch:jest": "jest --coverage --watchAll"
   },
   "description": "Style terminal strings with ReasonMl.",
   "keywords": [
@@ -22,14 +24,21 @@
     "logging",
     "logger"
   ],
-  "homepage": "https://github.com/srsholmes/colors.re",
+  "main": "lib/js/src/Colors.js",
+  "homepage": "https://github.com/srsholmes/colors.re#readme",
   "repository": "https://github.com/srsholmes/colors.re",
   "bugs": "https://github.com/srsholmes/colors.re/issues",
   "author": "Simon Holmes",
   "license": "MIT",
+  "files": [
+    "src/",
+    "bsconfig.json"
+  ],
   "devDependencies": {
     "@glennsl/bs-jest": "^0.3.3",
     "bs-platform": "^2.1.0",
-    "jest": "^22.4.0"
+    "jest": "^22.4.0",
+    "coveralls": "^3.0.0",
+    "nyc": "^11.4.1"
   }
 }
