--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "colors.re",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "scripts": {
     "build": "bsb -make-world",
     "start": "bsb -make-world -w",
     "clean": "bsb -clean-world",
-    "coverage":
-      "nyc report --temp-directory=coverage --reporter=text-lcov | coveralls",
+    "coverage": "nyc report --temp-directory=coverage --reporter=text-lcov | coveralls",
     "test": "npm run build && jest --coverage",
     "watch:jest": "jest --coverage --watchAll"
   },
